<resources>
    <string name="app_name">Football Sport</string>
    <string-array name="name">
        <item>English Premier League</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>Spanish La Liga</item>
        <item>American Mayor League</item>
        <item>Protugeuese Premiera Liga</item>
        <item>Australian A League</item>
        <item>Scotish Premier League</item>
        <item>English League 1</item>
    </string-array>
    <string-array name="badge">
        <item>@drawable/english_premier_league</item>
        <item>@drawable/german_bundesliga</item>
        <item>@drawable/italian_serie_a</item>
        <item>@drawable/spanish_la_liga</item>
        <item>@drawable/american_mayor_league</item>
        <item>@drawable/portugeuese_premiera_liga</item>
        <item>@drawable/australian_a_league</item>
        <item>@drawable/scotish_premier_league</item>
        <item>@drawable/english_league_1</item>
    </string-array>
    <string-array name="id">
        <item>4328</item>
        <item>4334</item>
        <item>4331</item>
        <item>4332</item>
        <item>4335</item>
        <item>4346</item>
        <item>4344</item>
        <item>4356</item>
        <item>4330</item>
        <item>4396</item>
    </string-array>
    <string name="away_team">Away Team</string>
    <string name="home_team">Home Team</string>
    <string name="logo_home_team">Logo Home Team</string>
    <string name="logo_away_team">Logo Away team</string>
    <string name="colon">:</string>
    <string name="min">-</string>
    <string name="logo_team">Logo Team</string>
    <string name="date_first_event">Date First Event</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="country">Country</string>
    <string name="sample_country">Sample Country</string>
</resources>