<?xml version="1.0" encoding="utf-8"?><!--
  ~ /**
  ~   Created by Yoga Setiawan on 12/11/19 10:46 PM
  ~   Copyright (c) 2019 . All rights reserved.
  ~   Last modified 11/12/19 10:12 PM
  ~   Github : https://github.com/arioki1/Submission-Kelas-Kade-Dicoding.git
  ~  */
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/ivDetailHomeLogo"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:background="@android:color/darker_gray"
        android:contentDescription="@string/logo_home_team"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDetailHomeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        android:text="@string/home_team"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/ivDetailHomeLogo"
        app:layout_constraintStart_toStartOf="@+id/ivDetailHomeLogo"
        app:layout_constraintTop_toBottomOf="@+id/ivDetailHomeLogo" />

    <TextView
        android:id="@+id/tvDetailHomeScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/min"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvDetailHomeName"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/ivDetailHomeLogo" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/colon"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvDetailHomeScore"
        app:layout_constraintEnd_toStartOf="@+id/ivDetailAwayLogo"
        app:layout_constraintStart_toEndOf="@+id/ivDetailHomeLogo"
        app:layout_constraintTop_toTopOf="@+id/tvDetailHomeScore" />

    <TextView
        android:id="@+id/tvDetailAwayScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/min"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvDetailAwayName"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/ivDetailAwayLogo" />

    <ImageView
        android:id="@+id/ivDetailAwayLogo"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@android:color/darker_gray"
        android:contentDescription="@string/logo_away_team"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDetailAwayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        android:text="@string/away_team"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/ivDetailAwayLogo"
        app:layout_constraintStart_toStartOf="@+id/ivDetailAwayLogo"
        app:layout_constraintTop_toBottomOf="@+id/ivDetailAwayLogo" />

</androidx.constraintlayout.widget.ConstraintLayout>